Updated Home page
Updated home page with some basic info.

--- a/SelfSite.MVC/SelfSite.MVC.csproj
+++ b/SelfSite.MVC/SelfSite.MVC.csproj
@@ -171,9 +171,11 @@
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\barfade.png" />
+    <Content Include="Content\Images\barfade.png" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\bg_space.jpg" />
+    <Content Include="Content\Images\Profile.png" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
